Projet total/Assembleur/tests/bad/testfile-bad-mov-2.ms
; can't move into an immediate
mov 42 %rax